--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "razzle-examples-with-afterjs",
+  "name": "florian-resume",
   "version": "0.8.14",
   "license": "MIT",
   "scripts": {
-    "start": "razzle start",
+    "start:dev": "razzle start",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
-    "start:prod": "NODE_ENV=production node build/server.js"
+    "start": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
     "@jaredpalmer/after": "latest",
     "express": "^4.16.2",
+    "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
+    "md5": "^2.2.1",
+    "prop-types": "15.6.1",
     "razzle": "^0.8.14",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-formio": "^1.5.2",
+    "react-formio": "fdidron/react-formio#2.x",
+    "react-ga": "2.4.1",
     "react-helmet": "^5.2.0",
-    "react-no-ssr": "^1.1.0",
-    "react-router-dom": "^4.2.2",
-    "react-typist": "^2.0.4"
+    "react-icons": "^2.2.7",
+    "react-router-dom": "^4.2.2"
   }
 }
